OPA/required-registry-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
        listKind: K8sAllowedReposList
        plural: k8sallowedrepos
        singular: k8sallowedrepo
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg, "details": {"missing_repos": missing}}] {
          provided := input.review.object.spec.containers[_].image
          accepted_repos := input.parameters.repos
          not any_match(provided, accepted_repos)
          missing := {provided}
          msg := sprintf("The provided image(s) %v are not from allowed repos %v", [missing, accepted_repos])
        }

        any_match(provided, accepted) {
          accepted[_] == provided
        }
